--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
       apiKey: "AIzaSyCmZBxRVcmTPJFLdWWcNd07LZPJYZnR5N0",
       authDomain: "portaria-e22ae.firebaseapp.com",
       projectId: "portaria-e22ae",
-      storageBucket: "portaria-e22ae.appspot.com", // ✅ corrigido
+      storageBucket: "portaria-e22ae.firebasestorage.app",
       messagingSenderId: "663485115589",
       appId: "1:663485115589:web:4b2f860ede7f0f7b5854ac",
+      measurementId: "G-QEGQN6CTBB"
     };
 
     const app = initializeApp(firebaseConfig);
